<resources>
    <string name="app_name">Coffee House</string>

    <string name="welcomeTxt">Welcome to Coffee House</string>
    <string name="website">www.CoffeeCafe.com</string>
    <string name="workingHours">Working hours: 8am-11pm</string>
    <string name="address">26, central plaza, MG road, Bengal 432\-567 </string>
    <string name="description">A coffeehouse, coffee shop, or cafe is an establishment that primarily serves coffee (of various types, e.g. espresso, latte, cappuccino).</string>

</resources>
