<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B56F6565"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/welcomeTxt"
                    android:textColor="@color/colorAccent"
                    android:textSize="30sp"
                    app:fontFamily="@font/amarante" />

                <ImageView
                    android:id="@+id/display_img"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:contentDescription="@string/welcomeTxt"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/coffee1" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@android:drawable/editbox_background_normal"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/image1"
                            style="@style/Images_style"
                            android:contentDescription="@string/app_name"
                            android:onClick="displayImage"
                            app:srcCompat="@drawable/coffee1" />

                        <ImageView
                            android:id="@+id/image2"
                            style="@style/Images_style"
                            android:contentDescription="@string/app_name"
                            android:onClick="displayImage"
                            app:srcCompat="@drawable/coffee2" />

                        <ImageView
                            android:id="@+id/image3"
                            style="@style/Images_style"
                            android:contentDescription="@string/app_name"
                            android:onClick="displayImage"
                            app:srcCompat="@drawable/coffee3" />

                        <ImageView
                            android:id="@+id/image4"
                            style="@style/Images_style"
                            android:contentDescription="@string/app_name"
                            android:onClick="displayImage"
                            app:srcCompat="@drawable/coffee4" />
                    </LinearLayout>
                </HorizontalScrollView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="40dp"
                    android:gravity="center"
                    android:text="@string/description"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    style="@style/ContactTv_style"
                    android:text="@string/address" />

                <TextView
                    style="@style/ContactTv_style"
                    android:text="@string/website" />

                <TextView
                    style="@style/ContactTv_style"
                    android:text="@string/workingHours" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>